--- a/apps/blog/src/components/Header.astro
+++ b/apps/blog/src/components/Header.astro
@@ -5,11 +5,11 @@ import HeaderLink from './HeaderLink.astro';
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
+		<h2><a href="/frctls/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/frctls/">Home</HeaderLink>
+			<HeaderLink href="/frctls/blog">Blog</HeaderLink>
+			<HeaderLink href="/frctls/about">About</HeaderLink>
 		</div>
 		<!-- Social links hidden for cleaner professional appearance -->
 	</nav>
